JETTY-710 Worked around poor implementation of File.toURL()